--- a/packages/graphic-walker/src/index.css
+++ b/packages/graphic-walker/src/index.css
@@ -1,6 +1,13 @@
 html{
   margin: 0px;
   padding: 0px;
+  background-color: #fff;
+}
+
+@media (prefers-color-scheme: dark) {
+  html {
+    background-color: rgb(24 24 27);
+  }
 }
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
