--- a/packages/graphic-walker/src/index.css
+++ b/packages/graphic-walker/src/index.css
@@ -1,25 +1,32 @@
-html{
-  margin: 0px;
-  padding: 0px;
-  background-color: #fff;
+html {
+    margin: 0px;
+    padding: 0px;
+    background-color: #fff;
 }
 
 @media (prefers-color-scheme: dark) {
-  html {
-    background-color: rgb(24 24 27);
-  }
+    html {
+        background-color: rgb(24 24 27);
+    }
 }
 body {
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
-  /* -webkit-font-smoothing: antialiased;
+    /* -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; */
-  margin: 0px;
-  padding: 0px;
+    margin: 0px;
+    padding: 0px;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+:root {
+    --map-tiles-filter: brightness(0.6) invert(1) contrast(3) hue-rotate(200deg) saturate(0.3) brightness(0.7);
+}
+
+.dark .map-tile {
+    filter: var(--map-tiles-filter, none);
 }
